fix room grid overflow

--- a/css/includes/components/_racks.scss
+++ b/css/includes/components/_racks.scss
@@ -165,6 +165,7 @@ ul.indexes {
     margin: 10px 0 10px 10px;
     float: left;
     padding: 15px 0 0 15px;
+    position: relative;
 
     *,
     ::before,
